# software-supply-chain-security

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  cyclonedx-sbom.json  mypy.ini  pyproject.toml  requirements.txt  test_secret.txt
.github/workflows/: cd.yml  ci.yml  scorecard.yml
assignment1/: __init__.py  constants.py  main.py  merkle_proof.py  util.py
rekor_verifier/: artifact.md  main.py  util.py
tests/: __init__.py  test_main.py  test_merkle_proof.py  test_util.py
